# ISO8583-Simulator

./: .gitignore  .pre-commit-config.yaml  BRIDGE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  start.py  start.spec  test-results.xml
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  publish.yml
benchmarks/: BASELINE.md  __init__.py  bench_builder.py  bench_parser.py  bench_roundtrip.py  conftest.py  run_all.py
classes/ISO8583/: ISO8583.py.bak  ISOErrors.py  message.py
classes/log/: logging.py
classes/logic/: auth.py  delegate.py  reversal.py  sale.py  sale.py.bak  test.py  void.py
classes/server/: server.py  server.py.bak
controllers/: core.py.bak
docs/: index.md  performance.md  troubleshooting.md
docs/api/: core.md  demo.md  llm.md
docs/architecture/: message-flow.md  module-structure.md  overview.md
docs/cli/: index.md
docs/core/: builder.md  emv.md  index.md  parser.md  pool.md  types.md  validator.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/llm/: explainer.md  generator.md  index.md  providers.md
docs/networks/: index.md  mastercard.md  others.md  visa.md
examples/: fields.json
iso8583sim/: demo.py
iso8583sim/cli/: __init__.py  commands.py  config.py  formatter.py  utils.py
iso8583sim/core/: __init__.py  _bitmap.pyx  _parser_fast.pyx  _validator_fast.pyx  builder.py  emv.py  parser.py  pool.py  types.py  validator.py
iso8583sim/llm/: __init__.py  base.py  explainer.py  generator.py  prompts.py
iso8583sim/llm/providers/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
notebooks/: 01_getting_started.ipynb  02_parsing_messages.ipynb  03_building_messages.ipynb  04_network_specifics.ipynb  05_emv_data.ipynb  06_benchmarking.ipynb  07_llm_features.ipynb  08_llm_features_ollama.ipynb
tests/: conftest.py  setup_test_structure.py  test_builder.py  test_cli.py  test_demo.py  test_emv.py  test_integration.py  test_llm.py  test_parser.py  test_pool.py  test_types.py  test_validator.py
tests/test_data/: test_config.yaml  test_messages.json
