[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iso8583sim"
version = "0.1.0"
description = "A hybrid ISO 8583 message simulator with CLI and web interface"
readme = "README.md"
authors = [
    { name = "Subhadip Mitra", email = "contact@subhadipmitra.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Office/Business :: Financial",
]
keywords = ["iso8583", "payment", "banking", "financial", "simulator"]
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "rich>=10.0.0",
    "typer>=0.4.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "coverage>=7.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "coverage>=7.4.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "ruff>=0.0.290",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--capture=no",
    "--strict-markers",
    "--tb=short",
    "--cov=iso8583sim",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--junitxml=test-results.xml",
]