[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iso8583sim"
version = "1.1.0"
description = "High-performance ISO 8583 message simulator with CLI, Python SDK, and LLM features"
readme = "README.md"
authors = [
    { name = "Subhadip Mitra", email = "contact@subhadipmitra.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Office/Business :: Financial",
]
keywords = ["iso8583", "payment", "banking", "financial", "simulator"]
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "rich>=10.0.0",
    "typer>=0.4.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "coverage>=7.4.0",
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "coverage>=7.4.0",
    "pyyaml>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "ruff>=0.0.290",
    "pre-commit>=3.5.0",
    "cython>=3.0.0",
]
perf = [
    "cython>=3.0.0",
]
# LLM providers for AI-powered features
llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.4.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.50.0",
]
google = [
    "google-generativeai>=0.8.0",
]
ollama = [
    "ollama>=0.4.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--capture=no",
    "--strict-markers",
    "--tb=short",
    "--cov=iso8583sim",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--junitxml=test-results.xml",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "benchmarks"]
# Relaxed type checking for this phase - tighten in v0.3.0
check_untyped_defs = false
disallow_untyped_defs = false
